# bitfield

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
bitbybit/: CHANGELOG.md  Cargo.toml  README.md
bitbybit-tests/: Cargo.toml
bitbybit-tests/src/: bitenum_legacy_tests.rs  bitenum_tests.rs  bitfield_tests.rs  bitfield_tests_legacy.rs  doc.rs  lib.rs
bitbybit-tests/tests/: bitenum_tests.rs  bitfield_tests.rs
bitbybit-tests/tests/ui/: catchall_implies_exhaustive.rs  catchall_implies_exhaustive.stderr  exhaustive_with_catchall.rs  exhaustive_with_catchall.stderr  multiple_catchall.rs  multiple_catchall.stderr  multiple_range_attributes.rs  multiple_range_attributes.stderr  multiple_ranges_attributes.rs  multiple_ranges_attributes.stderr  non_exhaustive_marked_exhaustive.rs  non_exhaustive_marked_exhaustive.stderr  overlapping_ranges.rs  overlapping_ranges.stderr  range_attribute_multiple_ranges.rs  range_attribute_multiple_ranges.stderr  range_bound_too_large.rs  range_bound_too_large.stderr  range_includes_other_variant.rs  range_includes_other_variant.stderr  range_value_is_array.rs  range_value_is_array.stderr  range_variant_wrong_type.rs  range_variant_wrong_type.stderr  ranges_attribute_no_ranges.rs  ranges_attribute_no_ranges.stderr  ranges_attribute_one_range.rs  ranges_attribute_one_range.stderr  ranges_value_is_range.rs  ranges_value_is_range.stderr
bitbybit/examples/: defmt_bitfields.rs  defmt_fields.rs  expand.rs  simple.rs
bitbybit/src/: bit_size.rs  bitenum.rs  bitfield.rs  lib.rs
bitbybit/src/bitfield/: codegen.rs  codegen_traits.rs  mod.rs  parsing.rs
bitbybit/tests/: basic.rs  builder_value_field.rs  correct.rs  default_values.rs  tests.rs  with_fields.rs
bitbybit/tests/no_compile/: exhaustive_bitenum.rs  exhaustive_bitenum.stderr  invalid_field_access.rs  invalid_field_access.stderr  invalid_field_range.rs  invalid_field_range.stderr  missing_fields_in_builder.rs  missing_fields_in_builder.stderr  non_exhaustive_bitenum.rs  non_exhaustive_bitenum.stderr  overlapping_bitfield_arrays.rs  overlapping_bitfield_arrays.stderr  overlapping_bitfield_arrays_with_stride.rs  (+5 more)
bitfields_tests/: Cargo.toml
bitfields_tests/tests/: bitenum_tests.rs  bitfield_tests.rs
qemu-tests/: Cargo.toml  device.x  qemu_run.sh  tests.sh
qemu-tests/output/: output.txt
qemu-tests/src/: interrupts.rs  lib.rs  main.rs
(+51 files in other folders)
