[package]
name = "bitbybit-tests"
version = "1.0.0"
authors = ["Daniel Lehmann <danlehmannmuc@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbybit = { path = "../bitbybit" }
arbitrary-int = "1.3"
defmt = "1"

[features]
default = ["defmt"]
# This is to allow cfg for enum members
test123 = []
# Adds test for feature flag on defmt support.
defmt = ["arbitrary-int/defmt"]
