[package]
name = "qemu-tests"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "QEMU no-std tests for bitbybit"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = { version =  "0.7" }
cortex-m-semihosting = "0.5.0"
defmt = "1"
defmt-semihosting = "0.3"
bitbybit = { path = "../bitbybit" }
arbitrary-int = { version = "2", features = ["defmt"] }

[profile.dev]
opt-level = 1

[profile.release]
debug = 2
